overflow problem fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@
     display: none;
 }
 
-:root{
+html, body {
     overflow-x: hidden;
-}
+  }
